[package]
name = "redgem"
version = "0.1.0"
license = "AGPL-3.0-or-later"
edition = "2024"

[dependencies]
argh = { version = "0.1.13", default-features = false, features = ["help"] }
async_zip = { version = "0.0.17", features = ["tokio-fs"] }
foxerror = "0.1.1"
percent-encoding = { version = "2.3.1", default-features = false }
tokio = { version = "1.45", features = ["rt-multi-thread", "net", "macros", "io-util", "fs", "time"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12", "ring"] }
url = { version = "2.5.4", default-features = false }

[features]
default = ["deflate"]
bzip2 = ["async_zip/bzip2"]
deflate = ["async_zip/deflate"]
xz = ["async_zip/xz"]
zstd = ["async_zip/zstd"]

[profile.smol]
inherits = "release"
opt-level = "z"
#panic = "abort"
strip = true
lto = true
